# ads-attribution-project

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUSINESS_SUMMARY.md  MODEL_CARD.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
configs/: attribution_baseline.yaml  attribution_smoke.yaml  batch_score_semisynthetic_xgboost_baseline.yaml  batch_score_semisynthetic_xgboost_smoke.yaml  calibration_drift_baseline.yaml  calibration_drift_smoke.yaml  ctr_baseline.yaml  ctr_baseline_v2_features.yaml  ctr_baseline_v2_split.yaml  ctr_compare_baseline.yaml  ctr_compare_baseline_v2_features.yaml  ctr_compare_baseline_v2_split.yaml  ctr_compare_smoke.yaml  ctr_smoke.yaml  ctr_smoke_v2_features.yaml  ctr_smoke_v2_split.yaml  drift_semisynthetic_xgboost_baseline.yaml  drift_semisynthetic_xgboost_smoke.yaml  policy_semisynthetic_xgboost_baseline.yaml  policy_semisynthetic_xgboost_smoke.yaml  sample.yaml  sample_smoke.yaml  uplift_baseline.yaml  uplift_semisynthetic_baseline.yaml  uplift_semisynthetic_rank_baseline.yaml  uplift_semisynthetic_rank_smoke.yaml  uplift_semisynthetic_rank_xgboost_baseline.yaml  uplift_semisynthetic_rank_xgboost_smoke.yaml  uplift_semisynthetic_smoke.yaml  uplift_smoke.yaml
data/fixtures/: ctr_smoke_seed.parquet
notebooks/: 01_eda.ipynb  02_ctr_model.ipynb
scripts/: ci_smoke.sh  local_quality.sh  make_sample.py
src/ads_project/: artifacts.py  config.py
tests/: test_calibration_drift.py  test_features.py  test_monitoring_drift.py  test_pipeline_artifacts.py  test_policy_scoring.py  test_schema.py
(+33 files in other folders)
